updating datset raw files

--- a/data/label_cubes.ipynb
+++ b/data/label_cubes.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "block_location = pd.read_csv('./block_location.csv')\n",
+    "block_location = pd.read_csv('./block_metadata.csv')\n",
     "\n",
     "# use monospace font and red color\n",
     "font = ImageFont.truetype(\"FreeMono.ttf\", 16)\n",
@@ -28,24 +28,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n# load all png images from './orig_with_arrows' folder\\nimages = [os.path.join(dir_1, f) for f in os.listdir(dir_1) if f.endswith('.png')]\\n\\nfor i, img in enumerate(images):\\n    img = Image.open(img)\\n\\n    img_config_id = int(os.listdir(dir_1)[i].split('_')[-2].lstrip('Configuration'))\\n    img_ver_id = int(os.listdir(dir_1)[i].split('_')[-1].split('.')[0].lstrip('v'))\\n\\n    # add labels at block locations\\n    for j, block in enumerate(block_location.values):\\n        # check if block_location is for the current image\\n        if block[0] != img_config_id:\\n            continue\\n        # add label at the block location\\n        # columns are labeled block_id and x, y\\n        draw = ImageDraw.Draw(img)\\n        draw.text((int(block[2])-5, int(block[3])-5), str(block[1]), font=font, fill=font_color)\\n\\n    # save the image in the out_dir\\n    img.save(os.path.join(out_dir_1, f'lab_{img_config_id}_v{img_ver_id}.png'))\\n\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load all png images from './orig_without_arrows' folder\n",
     "\n",
     "dir = './orig_without_arrows'\n",
-    "dir_1 = './orig_with_arrows'\n",
+    "#dir_1 = './orig_with_arrows'\n",
     "\n",
-    "out_dir = './lab_without_arrows'\n",
-    "out_dir_1 = './lab_with_arrows'\n",
+    "out_dir = './labelled_images'\n",
+    "#out_dir_1 = './lab_with_arrows'\n",
     "\n",
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
+    "\"\"\"\n",
     "if not os.path.exists(out_dir_1):\n",
     "    os.makedirs(out_dir_1)\n",
-    "\n",
+    "\"\"\"\n",
     "\n",
     "images = [os.path.join(dir, f) for f in os.listdir(dir) if f.endswith('.png')]\n",
     "\n",
@@ -65,10 +77,10 @@
     "        draw.text((int(block[2])-5, int(block[3])-5), str(block[1]), font=font, fill=font_color)\n",
     "\n",
     "\n",
-    "    # save the image in the out_dir\n",
-    "    img.save(os.path.join(out_dir, f'lab_{img_config_id}.png'))\n",
+    "    # save the image in the out_dir, make sure img_config_id is 2 digits\n",
+    "    img.save(os.path.join(out_dir, f'Configuration_{img_config_id}.png'))\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "# load all png images from './orig_with_arrows' folder\n",
     "images = [os.path.join(dir_1, f) for f in os.listdir(dir_1) if f.endswith('.png')]\n",
     "\n",
@@ -89,7 +101,8 @@
     "        draw.text((int(block[2])-5, int(block[3])-5), str(block[1]), font=font, fill=font_color)\n",
     "\n",
     "    # save the image in the out_dir\n",
-    "    img.save(os.path.join(out_dir_1, f'lab_{img_config_id}_v{img_ver_id}.png'))\n"
+    "    img.save(os.path.join(out_dir_1, f'lab_{img_config_id}_v{img_ver_id}.png'))\n",
+    "\"\"\"\n"
    ]
   }
  ],
