--- a/data/label_cubes.ipynb
+++ b/data/label_cubes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "\"\\n# load all png images from './orig_with_arrows' folder\\nimages = [os.path.join(dir_1, f) for f in os.listdir(dir_1) if f.endswith('.png')]\\n\\nfor i, img in enumerate(images):\\n    img = Image.open(img)\\n\\n    img_config_id = int(os.listdir(dir_1)[i].split('_')[-2].lstrip('Configuration'))\\n    img_ver_id = int(os.listdir(dir_1)[i].split('_')[-1].split('.')[0].lstrip('v'))\\n\\n    # add labels at block locations\\n    for j, block in enumerate(block_location.values):\\n        # check if block_location is for the current image\\n        if block[0] != img_config_id:\\n            continue\\n        # add label at the block location\\n        # columns are labeled block_id and x, y\\n        draw = ImageDraw.Draw(img)\\n        draw.text((int(block[2])-5, int(block[3])-5), str(block[1]), font=font, fill=font_color)\\n\\n    # save the image in the out_dir\\n    img.save(os.path.join(out_dir_1, f'lab_{img_config_id}_v{img_ver_id}.png'))\\n\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
     "dir = './orig_without_arrows'\n",
     "#dir_1 = './orig_with_arrows'\n",
     "\n",
-    "out_dir = './labelled_images'\n",
+    "out_dir = './images'\n",
     "#out_dir_1 = './lab_with_arrows'\n",
     "\n",
     "if not os.path.exists(out_dir):\n",
