--- a/data/synthetic_dataset.ipynb
+++ b/data/synthetic_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "for block_id in range(0, 14):\n",
+    "for i in range(0, 14):\n",
     "    #  create image 760x658\n",
     "    width = 760\n",
     "    height = 658\n",
@@ -61,12 +61,19 @@
     "    table_bbox = (table_left, table_top, table_left + table_width, table_top + table_height)\n",
     "    draw.rectangle(table_bbox, outline=(0, 0, 0))\n",
     "\n",
-    "    for i in range(block_id*15, block_id*15 + 15):\n",
-    "        x = block_metadata['x'][i]\n",
-    "        y = block_metadata['y'][i]\n",
-    "        color = block_metadata['color'][i]\n",
+    "    for j in range(i*15, i*15 + 15):\n",
+    "        x = block_metadata['x'][j]\n",
+    "        y = block_metadata['y'][j]\n",
+    "        color = block_metadata['color'][j]\n",
     "        draw.rectangle([x, y, x+25, y+25], fill = color)\n",
-    "    img.save(out_dir + 'synthetic_image_' + str(block_id + 1) + '.png')"
+    "\n",
+    "        # write block_id on the block\n",
+    "        block_id = block_metadata['block_id'][j]\n",
+    "        # calculate center of the block\n",
+    "        draw.text((x+7, y+7), str(block_id), fill=(255, 255, 255), stroke_fill=(0, 0, 0), stroke_width=1)\n",
+    "        \n",
+    "\n",
+    "    img.save(out_dir + 'synthetic_image_' + str(i + 1) + '.png')"
    ]
   },
   {
